--- a/stacks/prepare_data/prepare_data.ipynb
+++ b/stacks/prepare_data/prepare_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
     "from kfp.dsl import component\n",
     "from kfp.dsl import pipeline\n",
     "from kfp import compiler\n",
-    "from kfp.dsl import (Artifact, Model, Dataset, Input, Output, OutputPath, InputPath)\n",
+    "from kfp.dsl import (Artifact, Model, Dataset, Input, Output, Metrics)\n",
     "from kfp import dsl"
    ]
   },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
     "    train_data: Input[Artifact],\n",
     "    test_data: Input[Artifact],\n",
     "    model: Output[Model],\n",
-    "    metrics_artifact: Output[Artifact]\n",
+    "    metrics_artifact: Output[Metrics]\n",
     "):\n",
     "    import pickle as pkl\n",
     "    from sklearn.linear_model import LogisticRegression\n",
@@ -256,54 +256,93 @@
     "    \n",
     "    predictions = lr.predict(X_test)\n",
     "    \n",
-    "    metrics = {\n",
-    "        \"f1\": f1_score(y_test, predictions),\n",
-    "        \"accuracy\": accuracy_score(y_test, predictions)\n",
-    "    }\n",
+    "    metrics_artifact.log_metric(\"f1_score\", f1_score(y_test, predictions))\n",
+    "    metrics_artifact.log_metric(\"accuracy\", accuracy_score(y_test, predictions))\n",
     "\n",
     "    with open(model.path, \"wb\") as f:\n",
-    "        pkl.dump(lr, f)\n",
-    "    \n",
-    "    with open(metrics_artifact.path, \"wb\") as f:\n",
-    "        pkl.dump(metrics, f)"
+    "        pkl.dump(lr, f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.11/site-packages/kfp/dsl/component_decorator.py:121: FutureWarning: The default base_image used by the @dsl.component decorator will switch from 'python:3.8' to 'python:3.9' on Oct 1, 2024. To ensure your existing components work with versions of the KFP SDK released after that date, you should provide an explicit base_image argument and ensure your component works as intended on Python 3.9.\n",
+      "  return component_factory.create_component_from_func(\n"
+     ]
+    }
+   ],
+   "source": [
+    "@component()\n",
+    "def fetch_curr_model_metrics() -> float:\n",
+    "    \n",
+    "    return 0.7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@component()\n",
+    "def fetch_training_metrics(\n",
+    "    metrics_artifcat: Input[Metrics]\n",
+    ") -> float:\n",
+    "        \n",
+    "    return metrics_artifcat.metadata['f1_score']\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
     "@component(\n",
-    "    base_image=\"python:3.11-slim\",\n",
+    "        base_image=\"python:3.11-slim\",\n",
     "    packages_to_install=[\n",
-    "        config.packages.AIPLATFORM\n",
+    "        config.packages.SKLEARN\n",
     "    ]\n",
+    "    \n",
     ")\n",
-    "def upload_model_regestry(\n",
-    "    model: Input[Model],\n",
-    "    metrics_artifact: Input[Artifact]\n",
+    "def deploy_model(\n",
+    "    model_artifact: Input[Model],\n",
+    "    scaler_artifact: Input[Artifact]\n",
     "):\n",
     "    import pickle as pkl\n",
-    "    from google.cloud import aiplatform\n",
-    "\n",
-    "    model_regestry = aiplatform.Model.upload(\n",
-    "        display_name=\"titanic_survivors\",\n",
-    "        artifact_uri=model.uri,\n",
-    "        serving_container_image_uri=\"southamerica-east1-docker.pkg.dev/pebolas-sandbox/sample-model/titanic_model:latest\"\n",
-    "    )\n",
-    "\n",
-    "    with open(metrics_artifact.path, \"rb\") as f:\n",
-    "        metrics = pkl.load(f)\n",
-    "\n",
-    "    model_regestry.add_metrics(metrics)"
+    "    \n",
+    "    with open(model_artifact.path, \"rb\") as f:\n",
+    "        model = pkl.load(f)\n",
+    "        \n",
+    "    with open(scaler_artifact.path, \"rb\") as f:\n",
+    "        scaler = pkl.load(f)\n",
+    "        \n",
+    "    print(model)\n",
+    "    print(scaler)\n",
+    "    print(\"Model Deployed\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_18696/3333476882.py:40: DeprecationWarning: dsl.Condition is deprecated. Please use dsl.If instead.\n",
+      "  with dsl.Condition(\n"
+     ]
+    }
+   ],
    "source": [
     "@pipeline(\n",
     "    name=config.pipeline.name,\n",
@@ -337,16 +376,25 @@
     "        train_data=split_train_test_task.outputs[\"dataset_train\"],\n",
     "        test_data=split_train_test_task.outputs[\"dataset_test\"]\n",
     "    )\n",
-    "\n",
-    "    upload_model_regestry_task = upload_model_regestry(\n",
-    "        model=train_model_task.outputs[\"model\"],\n",
-    "        metrics_artifact=train_model_task.outputs[\"metrics_artifact\"]\n",
-    "    )"
+    "    \n",
+    "    fetch_curr_model_metrics_task = fetch_curr_model_metrics()\n",
+    "    \n",
+    "    fetch_training_metrics_task = fetch_training_metrics(\n",
+    "        metrics_artifcat=train_model_task.outputs[\"metrics_artifact\"]\n",
+    "    )\n",
+    "    \n",
+    "    with dsl.Condition(\n",
+    "        fetch_curr_model_metrics_task.output <= fetch_training_metrics_task.output\n",
+    "    ):\n",
+    "        deploy_model_task = deploy_model(\n",
+    "            model_artifact=train_model_task.outputs[\"model\"],\n",
+    "            scaler_artifact=scale_data_task.outputs[\"scaler_artifact\"]\n",
+    "        )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -395,17 +443,31 @@
      "output_type": "stream",
      "text": [
       "Creating PipelineJob\n",
-      "PipelineJob created. Resource name: projects/470842673491/locations/southamerica-east1/pipelineJobs/titanic-pipeline-20241004170914\n",
+      "PipelineJob created. Resource name: projects/470842673491/locations/southamerica-east1/pipelineJobs/titanic-pipeline-20241004190821\n",
       "To use this PipelineJob in another session:\n",
-      "pipeline_job = aiplatform.PipelineJob.get('projects/470842673491/locations/southamerica-east1/pipelineJobs/titanic-pipeline-20241004170914')\n",
+      "pipeline_job = aiplatform.PipelineJob.get('projects/470842673491/locations/southamerica-east1/pipelineJobs/titanic-pipeline-20241004190821')\n",
       "View Pipeline Job:\n",
-      "https://console.cloud.google.com/vertex-ai/locations/southamerica-east1/pipelines/runs/titanic-pipeline-20241004170914?project=470842673491\n"
+      "https://console.cloud.google.com/vertex-ai/locations/southamerica-east1/pipelines/runs/titanic-pipeline-20241004190821?project=470842673491\n",
+      "PipelineJob projects/470842673491/locations/southamerica-east1/pipelineJobs/titanic-pipeline-20241004190821 current state:\n",
+      "3\n",
+      "PipelineJob projects/470842673491/locations/southamerica-east1/pipelineJobs/titanic-pipeline-20241004190821 current state:\n",
+      "3\n",
+      "PipelineJob projects/470842673491/locations/southamerica-east1/pipelineJobs/titanic-pipeline-20241004190821 current state:\n",
+      "3\n",
+      "PipelineJob run completed. Resource name: projects/470842673491/locations/southamerica-east1/pipelineJobs/titanic-pipeline-20241004190821\n"
      ]
     }
    ],
    "source": [
     "job.run()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
